--- a/Movie_Recommendation_System.ipynb
+++ b/Movie_Recommendation_System.ipynb
@@ -639,6 +639,212 @@
    "source": [
     "movies['tags']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies = movies[['movie_id', 'title', 'overview', 'tags']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies['tags'] = movies['tags'].apply(lambda x: x.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
+       "      <td>action adventure fantasy science fiction cultu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>285</td>\n",
+       "      <td>Pirates of the Caribbean: At World's End</td>\n",
+       "      <td>Captain Barbossa, long believed to be dead, ha...</td>\n",
+       "      <td>adventure fantasy action ocean drug abuse exot...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>206647</td>\n",
+       "      <td>Spectre</td>\n",
+       "      <td>A cryptic message from Bond’s past sends him o...</td>\n",
+       "      <td>action adventure crime spy based on novel secr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>49026</td>\n",
+       "      <td>The Dark Knight Rises</td>\n",
+       "      <td>Following the death of District Attorney Harve...</td>\n",
+       "      <td>action crime drama thriller dc comics crime fi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49529</td>\n",
+       "      <td>John Carter</td>\n",
+       "      <td>John Carter is a war-weary, former military ca...</td>\n",
+       "      <td>action adventure science fiction based on nove...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movie_id                                     title  \\\n",
+       "0     19995                                    Avatar   \n",
+       "1       285  Pirates of the Caribbean: At World's End   \n",
+       "2    206647                                   Spectre   \n",
+       "3     49026                     The Dark Knight Rises   \n",
+       "4     49529                               John Carter   \n",
+       "\n",
+       "                                            overview  \\\n",
+       "0  In the 22nd century, a paraplegic Marine is di...   \n",
+       "1  Captain Barbossa, long believed to be dead, ha...   \n",
+       "2  A cryptic message from Bond’s past sends him o...   \n",
+       "3  Following the death of District Attorney Harve...   \n",
+       "4  John Carter is a war-weary, former military ca...   \n",
+       "\n",
+       "                                                tags  \n",
+       "0  action adventure fantasy science fiction cultu...  \n",
+       "1  adventure fantasy action ocean drug abuse exot...  \n",
+       "2  action adventure crime spy based on novel secr...  \n",
+       "3  action crime drama thriller dc comics crime fi...  \n",
+       "4  action adventure science fiction based on nove...  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "tfidf = TfidfVectorizer(stop_words='english')\n",
+    "tfidf_matrix = tfidf.fit_transform(movies['tags'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "cosine_sim = cosine_similarity(tfidf_matrix, tfidf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_recommendations(title, cosine_sim=cosine_sim):\n",
+    "    idx = movies[movies['title'] == title].index[0]\n",
+    "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
+    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+    "    sim_scores = sim_scores[1:11]  # Get top 10 similar movies\n",
+    "    movie_indices = [i[0] for i in sim_scores]\n",
+    "    return movies['title'].iloc[movie_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65               The Dark Knight\n",
+      "119                Batman Begins\n",
+      "1360                      Batman\n",
+      "210               Batman & Robin\n",
+      "428               Batman Returns\n",
+      "1361                      Batman\n",
+      "1197                The Prestige\n",
+      "303                     Catwoman\n",
+      "4644    Amidst the Devil's Wings\n",
+      "72                 Suicide Squad\n",
+      "Name: title, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_recommendations('The Dark Knight Rises')) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
